
[REMOVED] The :force_format option for image_columns as in 0.2.X has been removed and will be reintroduced later.

[REMOVED] The remote_upload_form helper has been removed, for encouraging bad JS practice. It will not be readded. If you need remote uploads, uploading with Flash is much cooler, and can be done in an unobtrusive way. Check out Swiff.js for hints.

============================

0.2.1

* Added :force_format option to image_column

* Various Rails 1.2.1 compatibility fixes (mainly in test)

* Added :permissions option to upload_column.

* You can now assign normal Ruby File objects to upload and image columns

* upload_form_tag and remote_upload_form_tag now accept a block, just like Rails' form_tag

* You can now pass :none to image_column versions so nothing will be done to your image.

* FIXED #8109 Parallell uploads no longer wipe each other out

* WARNING: Compatibility with Rails < 1.2.1 dropped

============================

0.2

* A freaking huge refactoring of the code, basically ALL of the methods for accessing paths have changed, except for path itself. This was overdue and I apologize if it breaks anything, but I felt that the gain in consistency was worth it. It now works like this:

    path                --the current path of the file (including the filename)
    relative_path       --the current path of the file relative to the root_path option
    
    dir                 --the directory where the file is currently stored
    relative_dir        --like dir but relative to root_path
    
    store_dir           --The directory where files are permanently stored
    relative_store_dir  --the same but relative to root_dir
    
    tmp_dir             --The directory where tempfiles are stored
    relative_tmp_dir    --you can work this out yourself
    
As you can see, this is now actually consistent, with all the relative paths relative to the same directory (err... wow?) and a consistent naming convention.
